<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileMenu">

    <TextView
        android:id="@+id/vaccine_info8"
        android:layout_width="285dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="128dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name4"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info3" />

    <TextView
        android:id="@+id/vaccine_info6"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="27dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name6"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info2"
        app:layout_constraintVertical_bias="0.783" />


    <TextView
        android:id="@+id/user_info"
        android:layout_width="349dp"
        android:layout_height="52dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/user_first_name"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/vaccine_info"
        android:layout_width="279dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.824"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_info" />

    <TextView
        android:id="@+id/vaccine_info2"
        android:layout_width="286dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="22dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name1"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.891"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info" />

    <TextView
        android:id="@+id/vaccine_info5"
        android:layout_width="285dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="11dp"
        android:layout_marginBottom="4dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name5"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info2" />

    <TextView
        android:id="@+id/vaccine_info3"
        android:layout_width="285dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="104dp"
        android:layout_marginBottom="59dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name2"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.813"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info4" />

    <TextView
        android:id="@+id/vaccine_info7"
        android:layout_width="285dp"
        android:layout_height="45dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="47dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name7"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.803"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/vaccine_info4"
        android:layout_width="283dp"
        android:layout_height="37dp"
        android:layout_marginStart="107dp"
        android:layout_marginLeft="107dp"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="16dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/vaccine_name3"
        android:textColor="#0C0C0C"
        app:layout_constraintBottom_toTopOf="@+id/vaccine_info3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vaccine_info2" />

</androidx.constraintlayout.widget.ConstraintLayout>