<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Discussions_after_login">
    <EditText
        android:id="@+id/disc_covid"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/disc_label_covid"
        android:textColor="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/childhood_vaccines"
        android:layout_width="0dp"
        android:layout_height="76dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/disc_label_childhood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/disc_covid" />

    <EditText
        android:id="@+id/topic_vaccine"
        android:layout_width="0dp"
        android:layout_height="73dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/disc_label_why_vaccine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/childhood_vaccines" />

    <EditText
        android:id="@+id/side_effect_stories"
        android:layout_width="0dp"
        android:layout_height="71dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/disc_label_side_effects"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topic_vaccine" />
    <EditText
        android:id="@+id/mode_or_pfiz"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:drawableLeft="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableEnd="@drawable/ic_baseline_arrow_forward_ios_24"
        android:drawableRight="@drawable/ic_baseline_arrow_forward_ios_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/disc_label_better_vaccine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/side_effect_stories" />

</androidx.constraintlayout.widget.ConstraintLayout>